# Data_Quality_Workshop

./: README.md  inferred_schema.py  mkdocs.yml  pyproject.toml
app/: funcao.py
docs/: index.md
exemplo/: exemplo_pandera_schema.py
tests/: test_funcao_ola.py
